--- a/style.css/hub.css
+++ b/style.css/hub.css
@@ -1,10 +1,6 @@
-
-
-.div{
-    font-size: 200px;
+.nav-link{
+    color:aquamarine;
 }
-
-
-.nav-link {
-    color: rgb(70, 187, 148);
+.nav-link.active{
+    color: rgb(111, 112, 112);
 }
